--- a/project/VS2010/MyLeetCode.vcxproj
+++ b/project/VS2010/MyLeetCode.vcxproj
@@ -116,6 +116,7 @@
     <ClCompile Include="..\..\src\Find_Minimum_in_Rotated_Sorted_Array_II.cpp" />
     <ClCompile Include="..\..\src\Find_Peak_Element.cpp" />
     <ClCompile Include="..\..\src\Find_the_Duplicate_Number.cpp" />
+    <ClCompile Include="..\..\src\First_Bad_Version.cpp" />
     <ClCompile Include="..\..\src\First_Missing_Positive.cpp" />
     <ClCompile Include="..\..\src\Flatten_Binary_Tree_to_Linked_List.cpp" />
     <ClCompile Include="..\..\src\Game_of_Life.cpp" />
@@ -146,6 +147,7 @@
     <ClCompile Include="..\..\src\Linked_List_Cycle_II.cpp" />
     <ClCompile Include="..\..\src\Longest_Common_Prefix.cpp" />
     <ClCompile Include="..\..\src\Longest_Consecutive_Sequence.cpp" />
+    <ClCompile Include="..\..\src\Longest_Increasing_Subsequence.cpp" />
     <ClCompile Include="..\..\src\Longest_Palindromic_Substring.cpp" />
     <ClCompile Include="..\..\src\Longest_Substring_Without_Repeating_Characters.cpp" />
     <ClCompile Include="..\..\src\Longest_Valid_Parentheses.cpp" />
