Today's share on Binary Search.

--- a/project/VS2010/MyLeetCode.vcxproj
+++ b/project/VS2010/MyLeetCode.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="..\..\src\Maximum_Product_Subarray.cpp" />
     <ClCompile Include="..\..\src\Maximum_Subarray.cpp" />
     <ClCompile Include="..\..\src\Max_Points_on_a_Line.cpp" />
+    <ClCompile Include="..\..\src\Max_Sum_of_Rectangle_No_Larger_Than_K.cpp" />
     <ClCompile Include="..\..\src\Median_of_Two_Sorted_Arrays.cpp" />
     <ClCompile Include="..\..\src\Merge_Intervals.cpp" />
     <ClCompile Include="..\..\src\Merge_k_Sorted_Lists.cpp" />
