Today's share on Binary Search.

--- a/project/VS2010/MyLeetCode.vcxproj.filters
+++ b/project/VS2010/MyLeetCode.vcxproj.filters
@@ -699,6 +699,9 @@
     <ClCompile Include="..\..\src\Max_Sum_of_Rectangle_No_Larger_Than_K.cpp">
       <Filter>Source\Devide and Conquer\Binary_Search</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\Valid_Perfect_Square.cpp">
+      <Filter>Source\Devide and Conquer\Binary_Search</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\include.h" />
