--- a/project/VS2010/MyLeetCode.vcxproj
+++ b/project/VS2010/MyLeetCode.vcxproj
@@ -263,6 +263,7 @@
     <ClCompile Include="..\..\src\Valid_Number.cpp" />
     <ClCompile Include="..\..\src\Valid_Palindrome.cpp" />
     <ClCompile Include="..\..\src\Valid_Parentheses.cpp" />
+    <ClCompile Include="..\..\src\Valid_Perfect_Square.cpp" />
     <ClCompile Include="..\..\src\Valid_Sudoku.cpp" />
     <ClCompile Include="..\..\src\Wiggle_Sort_II.cpp" />
     <ClCompile Include="..\..\src\Wildcard_Matching.cpp" />
