Today's share on Dynamic Programming.

--- a/project/VS2010/MyLeetCode.vcxproj.filters
+++ b/project/VS2010/MyLeetCode.vcxproj.filters
@@ -747,6 +747,9 @@
     <ClCompile Include="..\..\src\Coin_Change.cpp">
       <Filter>Source\Dynamic Programming</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\Counting_Bits.cpp">
+      <Filter>Source\Dynamic Programming</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\include.h" />
