--- a/project/VS2010/MyLeetCode.vcxproj
+++ b/project/VS2010/MyLeetCode.vcxproj
@@ -103,6 +103,7 @@
     <ClCompile Include="..\..\src\Convert_Sorted_Array_to_Binary_Search_Tree.cpp" />
     <ClCompile Include="..\..\src\Convert_Sorted_List_to_Binary_Search_Tree.cpp" />
     <ClCompile Include="..\..\src\Copy_List_with_Random_Pointer.cpp" />
+    <ClCompile Include="..\..\src\Counting_Bits.cpp" />
     <ClCompile Include="..\..\src\Count_and_Say.cpp" />
     <ClCompile Include="..\..\src\Count_Complete_Tree_Nodes.cpp" />
     <ClCompile Include="..\..\src\Count_of_Range_Sum.cpp" />
