--- a/project/VS2010/MyLeetCode.vcxproj
+++ b/project/VS2010/MyLeetCode.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="..\..\src\Insert_Delete_GetRandom_O(1).cpp" />
     <ClCompile Include="..\..\src\Insert_Delete_GetRandom_O(1)_Duplicates_allowed.cpp" />
     <ClCompile Include="..\..\src\Insert_Interval.cpp" />
+    <ClCompile Include="..\..\src\Integer_Break.cpp" />
     <ClCompile Include="..\..\src\Integer_to_Roman.cpp" />
     <ClCompile Include="..\..\src\Interleaving_String.cpp" />
     <ClCompile Include="..\..\src\Intersection_of_Two_Arrays.cpp" />
